[tool.poetry]
name = "pychlorinator"
version = "0.2.14b2"
description = ""
authors = ["pbutterworth <3683210+pbutterworth@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/pbutterworth/pychlorinator"

[tool.poetry.dependencies]
python = "^3.8"
pycryptodome = "^3.17"
bleak = ">=0.19.0"
bleak_retry_connector = ">=4.4.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Homepage = "https://github.com/pbutterworth/pychlorinator"
